--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -9,13 +9,17 @@ jobs:
   check_release:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Fetch release from Teamspeak Github
         id: external
         run: |
           repo="teamspeak/teamspeak6-server"
           latest_tag=$(curl -s  https://api.github.com/repos/$repos/releases/latest | jq -r '.tag_name' 2>/dev/null || echo "none")
-          echo "latest=$latest" >> $GITHUB_OUTPUT
-          echo "Last Teamspeak release : $latest"
+          echo "latest=$latest_tag" >> $GITHUB_OUTPUT
+          echo "Last Teamspeak release : $latest_tag"
       - name: Get last synced tag
         id: local
         run: |
