--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -5,6 +5,8 @@ on:
     - cron: '0 8 */1 * *'
   workflow_dispatch:
 
+permissions: write-all
+
 jobs:
   check_release:
     runs-on: ubuntu-latest
@@ -17,7 +19,7 @@ jobs:
         id: external
         run: |
           repo="teamspeak/teamspeak6-server"
-          latest_tag=$(curl -s  https://api.github.com/repos/$repos/releases/latest | jq -r '.tag_name' 2>/dev/null || echo "none")
+          latest_tag=$(curl -s  https://api.github.com/repos/$repo/releases/latest | jq -r '.name' 2>/dev/null || echo "none")
           echo "latest=$latest_tag" >> $GITHUB_OUTPUT
           echo "Last Teamspeak release : $latest_tag"
       - name: Get last synced tag
@@ -41,7 +43,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          tag="${{ steps.release.outputs.latest }}"
+          tag="${{ steps.external.outputs.latest }}"
           echo "Création du tag local : $tag"
           git tag "$tag"
           git push origin "$tag"
