fix: change trigger on release create

--- a/.github/workflows/teamspeak.yml
+++ b/.github/workflows/teamspeak.yml
@@ -1,9 +1,9 @@
 name: Teamspeak ARM Build
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types:
+      - created
 
 jobs:
   docker-build:
