--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -51,4 +51,5 @@ jobs:
         if: steps.compare.outputs.new_release == 'true'
         uses: softprops/action-gh-release@v2
         with:
+          token: '${{ secrets.REPO_TOKEN }}'
           tag_name: ${{ steps.external.outputs.latest }}
